changed colors + added partner logos + some copy

--- a/assets/scss/components/_landing.scss
+++ b/assets/scss/components/_landing.scss
@@ -15,7 +15,7 @@
         line-height: 1;
         padding-left: 111px;
         position: relative;
-        color: #bbc5d2;
+        color: #fff;
         margin-bottom: 33px;
 
         &::before {
