--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,7 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  scroll-behavior: smooth;
 }
 
 article,
@@ -10850,7 +10851,7 @@ a.text-dark:focus {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(../images/loader.gif) center no-repeat #fff;
+  background: url(../images/br-loader.gif) center no-repeat #fff;
 }
 
 .font-weight-medium {
@@ -10923,6 +10924,8 @@ a.text-dark:focus {
 .edica-footer-banner-section {
   z-index: 1;
   position: relative;
+  background-color: var(--light-brown);
+  padding-top: 40px;
 }
 
 .edica-footer-banner-section .footer-banner {
